# skytechx

./: CMakeLists.txt  cgamepad.h  cmapview.cpp  cradecspinbox.cpp  csetting.h  resource.qrc  skytech_x.pro
data/constellation/: constel.bnd  constel.def  constel.nam  default.lin
data/planets/: jupiter.xml  mars.xml  mercury.xml  moon.xml  neptune.xml  saturn.xml  sun.xml  uranus.xml  venus.xml
data/styles/: coffee.qss  night.qss  normal.qss
src/: cabout.h  cgamepad.cpp  cmapview.h  csetting.cpp  cstatusbar.h  skstatusbar.cpp
