project(skytechx CXX)
cmake_minimum_required(VERSION 3.1.0)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

include_directories("${CMAKE_CURRENT_BINARY_DIR}")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/src")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/src/core")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/src/jpl")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/src/hips")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/src/de404")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/src/elp2000")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/src/earthtools")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/src/vsop87")

find_package(Qt5 5.14 REQUIRED COMPONENTS
  Gui Widgets Core Network Multimedia PrintSupport Xml Sql Script Charts)

find_package(OpenMP)
if (OPENMP_FOUND)
  set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
  set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
  set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

QT5_ADD_RESOURCES(${CMAKE_CURRENT_SOURCE_DIR}/resource.qrc)

set(skytechx_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cadvsearch.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/curlfile.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/jd.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdlgsrchstarname.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/skwatch.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/shortcutdialog.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cbinocular.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/sunspotsdialog.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cskpainter.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/urat1.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csearchdsocat.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Gsc.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdaynight.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ctipofday.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cchartdialog.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cfrmedit.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csearch.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/mainwindow.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ctracklist.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/setting.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/crestoretm.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ctextsel.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/vocatalogparser.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ctimewidget.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdsocatalogue.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cinserttext.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/variablestarsdialog.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csohoimg.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ceventsearch.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/votpreviewdialog.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdssmanager.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/planetreport.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csettingdlg.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cteleeditdlg.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/vocatalog.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/skstopwatchctrl.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdb.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cscanrender.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdssdlg.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/clog.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cversioncheck.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cgrid.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cwaitlogo.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdownloadmpc.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cfits.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cplanetsize.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/mapobj.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/castro.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cconsole.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csearchwidget.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdso.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cnamemagview.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdownload.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/hipspropertiesdialog.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/dsoplug.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/skmath.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/xmlattrparser.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cpolarishourangle.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cfontcolorbutton.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/clvqinfo.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/skmapcontrol.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cinsertfinder.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ctimelapsepref.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cstatusbar.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csellanguage.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cradecspinbox.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdailyev.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/caddcustomobject.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/elp2000/elp2000.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ceventprogdlg.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/earthtools/cearthtools.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/earthtools/cparse.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/OrbitalElements.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/SGP4.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/CoordGeodetic.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/Observer.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/SolarPosition.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/TimeSpan.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/CoordTopocentric.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/Globals.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/DateTime.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/Vector.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/Tle.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/Util.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/Eci.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/creleseinfo.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/skserver.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/transform.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cearthmapview.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/usnob1.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cwpossel.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/background.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cseltelefield.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/votdataeditor.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cmeteorshower.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cephtable.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdsogalerylist.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cstylesel.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/checkcombobox.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csatevents.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cinsertcircle.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/clfmodel.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cgetprofile.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cteleplug.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cplanetrenderer.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cobjinfo.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/clinecolordlg.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csgp4.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/c3dsolarwidget.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cstarrenderer.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csatellitedlg.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Usno2A.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csettime.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/skprogressdialog.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/astcomdowntypedlg.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cpixmapwidget.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/colongitude.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/skymap.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csimplelist.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/clistwidget.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/hips/hipsmanager.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/hips/urlfiledownload.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/hips/hipsrenderer.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/vocatalogheaderparser.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdrawing.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/casteredit.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cmapview.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/suntexture.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/chorizoneditor.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/dssheaderdialog.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cmilkyway.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/precess.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cloadingdlg.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cgscreg.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cselteleplug.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cppmxl.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/twilightdialog.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/vocatalogmanager.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cabout.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/de404/MAR404.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/de404/JUP404.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/de404/VEN404.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/de404/de404.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/de404/moon_de404.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/de404/moon.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/de404/SAT404.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/de404/NEP404.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/de404/MER404.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/de404/URA404.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/de404/EAR404.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/casterdlg.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csearchconst.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/gcvs.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cgeohash.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cobjfillinfo.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cstarexample.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cskeventdocdialog.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdeltat.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/vsop87/venus_vsop87.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/vsop87/mercury_vsop87.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/vsop87/saturn_vsop87.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/vsop87/neptune_vsop87.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/vsop87/uranus_vsop87.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/vsop87/jupiter_vsop87.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/vsop87/vsop87.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/vsop87/mars_vsop87.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/vsop87/earth_vsop87.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/nomad.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/votheaderlist.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cimagemanip.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/healpix.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdemonstration.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csavetm.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cshape.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdownloadfile.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/votdataheaderlist.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdssopendialog.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cplanetvis.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cbkimages.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ceditsearch.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ccomdlg.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cfontcolordlg.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cplanetaltitude.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/constellation.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cobjtracking.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdsocomnamesearch.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/skstatusbar.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csetting.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cweather.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cgalery.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cpushcolorbutton.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/clunarfeatures.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csatelliteevent.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/skeventdocument.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csolarsystem.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ctychosearch.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/chipsadjustment.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cxmlsimplemapparser.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csetjd.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/systemsettings.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/czoombar.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/moonlessnightsdlg.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/votdataselectorwidget.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cucac5.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/smap.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cwposmap.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ctristatebutton.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdrawinglist.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/castcomsearch.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csignspinbox.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/jpl/jpl_eph.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cchartedit.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csatellitesearch.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/chistogram.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/vocatalogmanagerdialog.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdonation.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cmultiprogress.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/choreditorwidget.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cinsertfrmfield.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cframegradient.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/core/skutils.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/core/skfile.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/core/vecmath.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/core/plane.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/core/skdebug.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/core/skmatrix.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/core/skiconutils.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/core/skcore.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/nutation.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/pixcache.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/clunarfeaturessearch.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ccomedit.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/vocatalogdataparser.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cgamepad.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/chorizonwidget.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/vocatalogrenderer.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csaveimage.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ctimedialog.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/crts.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cbinocularedit.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/tycho.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/mlibration.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cplnsearch.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cephlist.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csethorizon.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/soundmanager.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csetposition.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cimageview.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/smartlabeling.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/clineeditcomp.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/c3dsolar.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cfinderedit.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/lunarphase.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csatxyz.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdbstarsdlg.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cucac4.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cmooncal.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdsocatalogue.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/castcomsearch.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/vocatalogmanagerdialog.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cversioncheck.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csellanguage.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csatellitedlg.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cmooncal.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cselteleplug.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cfrmedit.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/mainwindow.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cadvsearch.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csethorizon.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csearchconst.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cgetprofile.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdrawinglist.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/lunarphase.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cplanetaltitude.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cfinderedit.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/hipspropertiesdialog.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cwposmap.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/clinecolordlg.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csaveimage.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ctimedialog.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/crestoretm.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdlgsrchstarname.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csatelliteevent.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cbinocularedit.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdssdlg.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csettime.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csearchwidget.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cplanetvis.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cinsertfinder.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ccomedit.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdsogalerylist.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csetting.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/chorizoneditor.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ctextsel.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cinsertcircle.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csolarsystem.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csettingdlg.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ctychosearch.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csohoimg.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/caddcustomobject.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdeltat.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/votdataeditor.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ceventprogdlg.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/votpreviewdialog.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cobjtracking.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdsocomnamesearch.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/votdataheaderlist.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csatevents.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ceventsearch.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cseltelefield.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cinsertfrmfield.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cskeventdocdialog.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/astcomdowntypedlg.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/variablestarsdialog.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cteleeditdlg.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/choreditorwidget.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cwpossel.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cloadingdlg.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/casterdlg.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/votheaderlist.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ctimewidget.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cinserttext.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdailyev.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csetposition.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ctracklist.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/creleseinfo.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdownloadfile.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/votdataselectorwidget.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cobjinfo.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/dssheaderdialog.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cfontcolordlg.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cbinocular.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cephtable.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csetjd.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/twilightdialog.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/clunarfeaturessearch.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdbstarsdlg.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cplanetsize.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cstylesel.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdaynight.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cplnsearch.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/moonlessnightsdlg.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ctipofday.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdownloadmpc.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csearchdsocat.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/c3dsolar.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ctimelapsepref.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cephlist.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ccomdlg.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/skstopwatchctrl.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cpolarishourangle.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/shortcutdialog.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/sunspotsdialog.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cweather.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/casteredit.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csavetm.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/chipsadjustment.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdssmanager.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cchartdialog.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cabout.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdonation.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cgalery.ui
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csatellitesearch.ui
  )

set(skytechx_HEADERS
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cconsole.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/urat1.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cmapview.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/pixcache.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/vocatalogrenderer.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cbkimages.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ctimewidget.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cmooncal.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/mainwindow.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/tycho.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cmeteorshower.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/transform.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/skeventdocument.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cplanetrenderer.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cstylesel.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/clog.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cfontcolordlg.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/clunarfeaturessearch.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdrawing.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cephlist.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csettingdlg.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cseltelefield.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdonation.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cinserttext.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/smartlabeling.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cxmlsimplemapparser.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdownloadmpc.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/chipsadjustment.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/lunarphase.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cradecspinbox.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/astcomdowntypedlg.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csolarsystem.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/tass17.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cstarrenderer.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cframegradient.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ceventsearch.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cstatusbar.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Gsc.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/setting.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/nutation.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cpixmapwidget.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cnamemagview.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/colongitude.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/choreditorwidget.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/variablestarsdialog.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cteleplugininterface.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/gcvs.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ctristatebutton.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/vocatalogdataparser.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cinsertfinder.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cgamepad.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/votheaderlist.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/castcomsearch.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cimageview.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/soundmanager.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdsogalerylist.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ccomdlg.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/skmapcontrol.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/jd.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/crts.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ctychosearch.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdsoplugininterface.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/elp2000/elp2000.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/clvqinfo.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/earthtools/cearthtools.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/earthtools/cparse.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csatevents.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/DecayedException.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/Eci.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/Vector.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/TleException.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/SolarPosition.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/CoordTopocentric.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/Tle.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/Observer.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/OrbitalElements.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/Util.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/Globals.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/SatelliteException.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/TimeSpan.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/SGP4.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/CoordGeodetic.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/libsgp4/DateTime.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csohoimg.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cgetprofile.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdssmanager.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ceditsearch.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cucac5.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csavetm.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/clineeditcomp.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Usno2A.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cloadingdlg.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/c3dsolarwidget.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cfrmedit.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/vocatalogmanager.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/skymap.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cselteleplug.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdlgsrchstarname.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/precess.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/caddcustomobject.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/skstatusbar.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ctipofday.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csetposition.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/chorizoneditor.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ctimedialog.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/planetreport.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csatellitesearch.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/usnob1.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cinsertcircle.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdsocatalogue.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/vocatalogmanagerdialog.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cucac4.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/sunspotsdialog.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cshape.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/dsoplug.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/background.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cabout.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/vocatalogparser.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/vocatalog.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/skserver.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/clinecolordlg.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cteleplug.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/xmlattrparser.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csettime.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csimplelist.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cephtable.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdsocomnamesearch.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cmilkyway.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/hips/hipsmanager.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/hips/urlfiledownload.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/hips/hipsrenderer.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/hips/hips.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csearchdsocat.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdso.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cadvsearch.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cskpainter.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdbstarsdlg.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/casteredit.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cgalery.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cinsertfrmfield.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cplnsearch.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csearchwidget.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cgeohash.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csetjd.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/castro.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdrawinglist.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/dso_def.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csetting.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cteleeditdlg.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/votdataeditor.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/votdataselectorwidget.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csignspinbox.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cscanrender.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cfontcolorbutton.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/de404/plantbl.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cfinderedit.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/systemsettings.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cobjfillinfo.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csatelliteevent.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/vsop87/vsop87.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cversioncheck.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdaynight.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdb.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csatellitedlg.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/chorizonwidget.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ctextsel.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/c3dsolar.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/skstopwatchctrl.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/czoombar.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/dssheaderdialog.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cchartedit.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/curlfile.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cplanetaltitude.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/clfmodel.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cpushcolorbutton.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cearthmapview.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdssdlg.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csgp4.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cwposmap.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cfits.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/crestoretm.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csaveimage.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cbinocular.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cmultiprogress.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/skcalendar.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/suntexture.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csearchconst.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/smap.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/shortcutdialog.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdssopendialog.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdownloadfile.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/creleseinfo.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/build.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/healpix.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cgscreg.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cwpossel.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cobjtracking.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/jpl/jpl_int.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/jpl/jpl_eph.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/mapobj.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cpolarishourangle.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdailyev.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csearch.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csethorizon.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ctracklist.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cweather.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cplanetsize.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/build_inc.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdeltat.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/chistogram.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/core/skdebug.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/core/vecmath.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/core/skiconutils.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/core/plane.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/core/skmath.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/core/skcore.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/core/skmatrix.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/core/const.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/core/skutils.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/core/skfile.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/core/bbox.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdemonstration.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/skprogressdialog.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/constellation.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ctimelapsepref.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cchartdialog.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/twilightdialog.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cimagemanip.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/clunarfeatures.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cplanetvis.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/moonlessnightsdlg.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cskeventdocdialog.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/skwatch.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/hipspropertiesdialog.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cwaitlogo.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csellanguage.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/casterdlg.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cbinocularedit.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/vocatalogheaderparser.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cobjinfo.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/nomad.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/votdataheaderlist.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/checkcombobox.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/clistwidget.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cppmxl.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/csatxyz.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cstarexample.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/votpreviewdialog.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cdownload.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ccomedit.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/ceventprogdlg.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/cgrid.h
  )

set(skytechx_RESOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/resource.qrc
  )

add_executable(skytechx ${skytechx_SOURCES} ${skytechx_HEADERS} ${skytechx_RESOURCES})

target_link_libraries(skytechx
  Qt5::Gui
  Qt5::Widgets
  Qt5::Core
  Qt5::Network
  Qt5::Multimedia
  Qt5::PrintSupport
  Qt5::Xml
  Qt5::Sql
  Qt5::Script
  Qt5::Charts
  )
